--- a/src/server/Ebenezer/Ebenezer.vcxproj.filters
+++ b/src/server/Ebenezer/Ebenezer.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="..\..\common\JvCryption.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\common\Implode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AIPacket.h">
@@ -297,6 +300,9 @@
       <Filter>N3Base</Filter>
     </ClInclude>
     <ClInclude Include="..\..\common\JvCryption.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\common\Implode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
