--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,7 @@
 name: PR Checks
 on:
-  push: {}
+  push:
+    branches: [master]
   pull_request:
     branches: [master]
     types: [opened, push, ready_for_review]
@@ -13,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout git repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Check lint
         run: |
