Add workflow_dispatch for lint workflow.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
     branches: [master]
     types: [opened, push, ready_for_review]
+  workflow_dispatch:
 
 jobs:
   pr-checks:
