Extract common functionality into N3Utils header.
This to assure that we don't duplicate implementations all over for
reusable and simple utility functions.

--- a/src/game/KnightOnLine.vcxproj
+++ b/src/game/KnightOnLine.vcxproj
@@ -134,6 +134,7 @@
   <ItemGroup>
     <ClInclude Include="..\common\Implode.h" />
     <ClInclude Include="..\common\JvCryption.h" />
+    <ClInclude Include="..\common\N3Utils.h" />
     <ClInclude Include="..\engine\N3Base\JpegFile.h" />
     <ClInclude Include="..\engine\N3Base\BitMapFile.h" />
     <ClInclude Include="..\engine\N3Base\DFont.h" />
