--- a/src/server/Ebenezer/Ebenezer.vcxproj.filters
+++ b/src/server/Ebenezer/Ebenezer.vcxproj.filters
@@ -305,6 +305,9 @@
     <ClInclude Include="..\..\common\Implode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\Ebenezer.ico">
