--- a/src/server/ItemManager/ItemManager.vcxproj.filters
+++ b/src/server/ItemManager/ItemManager.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClInclude Include="STLMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\ItemManager.ico">
