--- a/src/tool/Launcher/Launcher/Launcher.vcxproj.filters
+++ b/src/tool/Launcher/Launcher/Launcher.vcxproj.filters
@@ -73,6 +73,9 @@
     <ClInclude Include="StdAfx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\common\N3Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\Bkg.bmp">
