--- a/src/tool/N3FXE/N3FXE.vcxproj.filters
+++ b/src/tool/N3FXE/N3FXE.vcxproj.filters
@@ -505,6 +505,9 @@
     <ClInclude Include="..\..\engine\N3Base\N3Log.h">
       <Filter>N3Base</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\N3FXE.ico">
