--- a/src/tool/N3Viewer/N3Viewer.vcxproj.filters
+++ b/src/tool/N3Viewer/N3Viewer.vcxproj.filters
@@ -340,6 +340,9 @@
     <ClInclude Include="ViewSceneTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\N3Viewer.ico">
