--- a/src/server/Ebenezer/Ebenezer.vcxproj
+++ b/src/server/Ebenezer/Ebenezer.vcxproj
@@ -169,6 +169,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\common\Implode.h" />
     <ClInclude Include="..\..\common\JvCryption.h" />
+    <ClInclude Include="..\..\common\N3Utils.h" />
     <ClInclude Include="AIPacket.h" />
     <ClInclude Include="AISocket.h" />
     <ClInclude Include="BattleSet.h" />
