--- a/src/server/LoginServer/LoginServer.vcxproj.filters
+++ b/src/server/LoginServer/LoginServer.vcxproj.filters
@@ -103,6 +103,9 @@
     <ClInclude Include="VersionSet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\LoginServer.ico">
