--- a/src/tool/KscViewer/KscViewer.vcxproj.filters
+++ b/src/tool/KscViewer/KscViewer.vcxproj.filters
@@ -76,6 +76,9 @@
     <ClInclude Include="..\..\engine\N3Base\N3Log.h">
       <Filter>N3Base</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>N3Base</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\KscViewer.ico">
