--- a/src/tool/N3CE/N3CE.vcxproj.filters
+++ b/src/tool/N3CE/N3CE.vcxproj.filters
@@ -376,6 +376,9 @@
     <ClInclude Include="..\..\engine\N3Base\N3Log.h">
       <Filter>N3Base</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>N3Base</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\N3CE.ico">
