--- a/src/tool/N3Indoor/N3Indoor.vcxproj.filters
+++ b/src/tool/N3Indoor/N3Indoor.vcxproj.filters
@@ -316,6 +316,9 @@
     <ClInclude Include="..\..\engine\N3Base\N3Log.h">
       <Filter>N3Base</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>N3Base</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ComDialog.cpp">
