--- a/src/tool/N3TexViewer/N3TexViewer.vcxproj.filters
+++ b/src/tool/N3TexViewer/N3TexViewer.vcxproj.filters
@@ -127,6 +127,9 @@
     <ClInclude Include="..\..\engine\N3Base\LogWriter.h">
       <Filter>N3Base</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>N3Base</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\N3TexViewer.ico">
