--- a/src/tool/RscTables/RscTables.vcxproj.filters
+++ b/src/tool/RscTables/RscTables.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClInclude Include="TableGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\RscTables.ico">
