--- a/src/tool/ServerInfoViewer/ServerInfoViewer.vcxproj.filters
+++ b/src/tool/ServerInfoViewer/ServerInfoViewer.vcxproj.filters
@@ -133,6 +133,9 @@
     <ClInclude Include="..\..\engine\N3Base\N3Transform.h">
       <Filter>N3Base</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\common\N3Utils.h">
+      <Filter>N3Base</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\ServerInfoViewer.ico">
