--- a/src/game/KnightOnLine.vcxproj.filters
+++ b/src/game/KnightOnLine.vcxproj.filters
@@ -646,6 +646,12 @@
     <ClInclude Include="..\common\N3Utils.h">
       <Filter>N3Base\Core</Filter>
     </ClInclude>
+    <ClInclude Include="UICmdList.h">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="UICmdEdit.h">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Resource.rc">
@@ -1161,6 +1167,12 @@
       <Filter>Procedure - Main\UI</Filter>
     </ClCompile>
     <ClCompile Include="UIExitMenu.cpp">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UICmdList.cpp">
+      <Filter>Procedure - Main\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UICmdEdit.cpp">
       <Filter>Procedure - Main\UI</Filter>
     </ClCompile>
   </ItemGroup>
