Implement in game command list

--- a/src/game/res/Resource.rc
+++ b/src/game/res/Resource.rc
@@ -797,7 +797,8 @@ BEGIN
     IDS_CMD_FIRECLAN        "클랜추방"
     IDS_CMD_APPOINTVICECHIEF "부단장임명"
     IDS_CMD_GREETING        "인사"
-    IDS_CMD_EXCITE          "도발"
+    IDS_CMD_GREETING2       "도발"
+    IDS_CMD_GREETING3       "도발"
     IDS_CMD_VISIBLE         "보이지"
     IDS_CMD_INVISIBLE       "안보이지"
     IDS_CMD_CLEAN           "맑음"
@@ -1699,7 +1700,8 @@ BEGIN
     IDS_CMD_FIRECLAN        "FIRECLAN"
     IDS_CMD_APPOINTVICECHIEF "APPOINT_VC"
     IDS_CMD_GREETING        "HELLO"
-    IDS_CMD_EXCITE          "EXCITE"
+    IDS_CMD_GREETING2       "HELLO"
+    IDS_CMD_GREETING3       "HELLO"
     IDS_CMD_VISIBLE         "VISIBLE"
     IDS_CMD_INVISIBLE       "INVISIBLE"
     IDS_CMD_CLEAN           "CLEAN"
