Configure vscode to use LF line feed for newly created files.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.autoGuessEncoding": true,
+    "files.eol": "\n",
     "files.associations": {
         "vector": "cpp",
         "algorithm": "cpp",
