--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-* text=auto eol=lf
+* text eol=LF
+*.rc text working-tree-encoding=UTF-16LE-BOM eol=LF
+*.rc2 text working-tree-encoding=UTF-16LE-BOM eol=LF
