--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,12 +9,18 @@ jobs:
     runs-on: windows-2022
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Build
+      - name: Install Dependencies
         shell: cmd
         run: |
-          build.cmd
+          git submodule init src/vendor
+          git submodule update src/vendor
+
+      - name: Build All
+        shell: cmd
+        run: |
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat"
+          cd src
+          msbuild All.sln -t:Clean -t:Build -p:Configuration=Release /m
 
       - name: Upload
         uses: actions/upload-artifact@v3
