Add back text=auto to gitattributes.
Note that I had issues with that where I missed one file to specify as binary,
which is *.cur files and then the resource compiler had issues to compile the
resource, since git normalized it assuming it is a text file.
Using text=auto we'll let git detect if it is a text file and only then apply
the rule for line feed as needed.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,16 @@
-* text eol=LF
+* text=auto eol=LF
 
 *.rc text working-tree-encoding=UTF-16LE-BOM eol=LF
 *.rc2 text working-tree-encoding=UTF-16LE-BOM eol=LF
 
 # Common binary files to hint git not to touch
 # https://docs.github.com/en/get-started/getting-started-with-git/configuring-git-to-handle-line-endings
+# Note that if you're adding binary files to this repo (ideally not), please add them here.
 *.bmp binary
+*.png binary
+*.cur binary
 *.ico binary
+*.chm binary
 *.doc binary
 *.gtt binary
 *.smd binary
-*.chm binary
