--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -14,14 +14,23 @@ jobs:
           git submodule init src/vendor
           git submodule update src/vendor
 
-      - name: Build All
+      - name: Build All - Debug
         shell: cmd
         run: |
           call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat"
           cd src
+          msbuild All.sln -t:Clean -t:Build -p:Configuration=Debug /m
+
+      - name: Build All - Release
+        shell: cmd
+        run: |
+          git reset --hard
+          git clean -xffd
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat"
+          cd src
           msbuild All.sln -t:Clean -t:Build -p:Configuration=Release /m
 
-      - name: Upload
+      - name: Upload - Release
         uses: actions/upload-artifact@v4
         with:
           name: All-x86-release
