Lower case file extensions.

--- a/src/tool/N3Indoor/N3Indoor.vcxproj
+++ b/src/tool/N3Indoor/N3Indoor.vcxproj
@@ -287,19 +287,19 @@
     <ResourceCompile Include="res\N3Indoor.rc" />
     <CustomBuild Include="res\N3Indoor.rc2" />
     <None Include="res\N3Indoor.reg" />
-    <Image Include="res\ARW09DN.ICO" />
-    <Image Include="res\ARW09UP.ICO" />
-    <Image Include="res\HANDSHAK.ICO" />
-    <Image Include="res\HEART.ICO" />
+    <Image Include="res\ARW09DN.ico" />
+    <Image Include="res\ARW09UP.ico" />
+    <Image Include="res\HANDSHAK.ico" />
+    <Image Include="res\HEART.ico" />
     <Image Include="res\N3Indoor.ico" />
     <Image Include="res\N3IndoorDoc.ico" />
-    <Image Include="res\POINT02.ICO" />
-    <Image Include="res\POINT03.ICO" />
-    <Image Include="res\POINT04.ICO" />
-    <Image Include="res\POINT05.ICO" />
-    <Image Include="res\POINT06.ICO" />
+    <Image Include="res\POINT02.ico" />
+    <Image Include="res\POINT03.ico" />
+    <Image Include="res\POINT04.ico" />
+    <Image Include="res\POINT05.ico" />
+    <Image Include="res\POINT06.ico" />
     <Image Include="res\Toolbar.bmp" />
-    <CustomBuild Include="res\MOVE4WAY.CUR" />
+    <CustomBuild Include="res\MOVE4WAY.cur" />
     <CustomBuild Include="res\transform.cur" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
