--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,4 +32,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: x86-release
-          path: src/build/Release/*.exe
+          path: src/build/x86-Release/*.exe
