Update N3Viewer to include missing N3Log files.
+ Organize directory structure in VS to separate N3Base.

--- a/src/tool/N3Viewer/N3Viewer.vcxproj
+++ b/src/tool/N3Viewer/N3Viewer.vcxproj
@@ -121,6 +121,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\engine\N3Base\N3Log.cpp" />
     <ClCompile Include="..\Widget\PropertyList.cpp" />
     <ClCompile Include="..\..\engine\N3Base\BitMapFile.cpp" />
     <ClCompile Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
@@ -178,6 +179,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\common\N3Utils.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Log.h" />
     <ClInclude Include="..\Widget\PropertyList.h" />
     <ClInclude Include="..\..\engine\N3Base\BitMapFile.h" />
     <ClInclude Include="..\..\engine\N3Base\My_3DStruct.h" />
